# my_cross_sdk

./: .gitignore  CMakeLists.txt  README.md  cross.podspec
cmake/android/: build.gradle.cmake  gen_android.cmake  local.properties.cmake  settings.gradle.cmake
cmake/android/gradle/wrapper/: gradle-wrapper.properties
sdk/android/: build.gradle
sdk/android/src/main/cpp/: CMakeLists.txt
sdk/ios/: CMakeLists.txt
src/cross/url_signature/: CMakeLists.txt  url_signature.cpp
src/url_signature/: CMakeLists.txt
test/gtest/: CMakeLists.txt
